# HydroBOT_website

./: .Rprofile  .gitignore  .nojekyll  LICENSE.md  README.md  TESTING_PACKAGE_INSTALL.qmd  WERP_toolkit_demo.Rproj  WERP_toolkit_demo.qmd  _quarto-fullsite.yml  _quarto-singlefile.yml  _quarto.website.yml  _quarto.yml  _quarto_simple.yml  _quarto_website.yml  agg_metadata.yml  debug_temp.R  developer.md  getting_started.html  getting_started.qmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
CASE_STUDY/: Macquarie_gauges.csv  ewr_gauges.html  ewr_gauges.qmd  macquarie_gauges.qmd
Presentation/: saving_fig_scratch.R  walkthrough_presentation.html  walkthrough_presentation.qmd
R/: helpers.R
aggregator/: aggregation_overview.html  aggregation_overview.qmd  aggregation_syntax.html  aggregation_syntax.qmd  flow_scaling_aggregation.html  flow_scaling_aggregation.qmd  pseudo_spatial_group_until.html  pseudo_spatial_group_until.qmd  psuedo_spatial_group_until.qmd  read_and_agg.html  read_and_agg.qmd  spatial_agg.html  spatial_agg.qmd  temporal_agg.html  temporal_agg.qmd  theme_agg.qmd  theme_space_agg.html  theme_space_agg.qmd  user_causal.html  user_causal.qmd  user_functions.html  user_functions.qmd  user_module.html  user_module.qmd  user_spatial.html  user_spatial.qmd  using_multi_aggregate.qmd
causal_networks/: causal_manipulation.html  causal_manipulation.qmd  causal_overview.html  causal_overview.qmd  causal_plots.html  causal_plots.qmd  references.bib
comparer/: bar_plots.html  bar_plots.qmd  causal_plots.html  causal_plots.qmd  (+19 more)
(+93 files in other folders)
