[tool.poetry]
name = "werp-toolkit-demo"
version = "0.1.0"
description = ""
authors = ["Galen Holt <53928785+galenholt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "werp_toolkit_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
py-ewr = {git = "https://github.com/MDBAuth/EWR_tool.git", rev = "GalenH"}
geopandas = "^0.14.0"
gitpython = "^3.1.40"
plotnine = "^0.12.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
